# teal-simple

./: pyproject.toml  service.tl
tests/: test_lib.py
