[tool.poetry]
name = "teal-simple"
version = "0.1.0"
description = "teal starter project"
authors = ["Ismail Bello <ismail.bello.513@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
teal-lang = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
